--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
+        "mike42/escpos-php": "^2.2",
         "picqer/php-barcode-generator": "^2.2",
         "spatie/laravel-backup": "^8.1",
         "spatie/laravel-permission": "^5.10"
